<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="110dp"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context="com.graduationwork.tracediary.DialogActivity.DeleteMakerDialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:text="@string/delete_marker"
            android:textColor="@android:color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:gravity="right">

        <LinearLayout
            android:id="@+id/btn_maker_delete_cancle"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:background="@drawable/press">

            <TextView
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/cancle"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_maker_delete"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:background="@drawable/press">

            <TextView
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/delete"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>
