<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/notepad"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/setting_tool_bar"/>

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:orientation="horizontal">

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/select_alarm_OnOff"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:text="@string/alarm"/>

                <Button
                    android:id="@+id/setting_alarm_OnOff"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp">
            </LinearLayout>


            <TextView
                android:id="@+id/select_radius"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textSize="15sp"
                android:gravity="center"
                android:text="@string/radius" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:orientation="horizontal">


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/radius_help"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="right"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/insert_radius"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="55dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/radius_hint"
                    android:maxLength="6"
                    android:textCursorDrawable="@android:color/black"
                    android:backgroundTint="@color/colorPrimary"/>

                <Button
                    android:id="@+id/setting_radius"
                    android:layout_width="117dp"
                    android:layout_height="50dp"
                    android:text="@string/radius" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/alarm_state"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:gravity="center"
                    android:text="@string/set_alarm" />

                <TextView
                    android:id="@+id/text_alarm_state"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_weight="3"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/alarm_radius"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:gravity="center"
                    android:text="@string/set_radius" />

                <TextView
                    android:id="@+id/text_alarm_radius"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center" />
            </LinearLayout>


        </LinearLayout>


    </android.support.design.widget.CoordinatorLayout>


</android.support.v4.widget.DrawerLayout>